[package]
name = "unpack"
version = "0.1.0"
authors = ["Gregory <gregory.mkv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.4"
thiserror = "1.0.24"
compress-tools = "*"
rayon = "1.5.0"
memmap = "0.7.0"
atty = "0.2.14"
